--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="articles-container">
         <div
           class="article-card"
-          onclick="location.href='/explain/random-forest/';"
+          onclick="location.href='./random-forest/';"
           style="cursor: pointer"
         >
           <div class="imgBx"><img src="rfimg.png" /></div>
