--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div
           class="article-card"
-          onclick="location.href='/explain/bias-variance';"
+          onclick="location.href='./bias-variance';"
           style="cursor: pointer"
         >
           <div class="imgBx"><img src="bias-variance.8475ab7f.png" /></div>
@@ -99,7 +99,7 @@
         </div>
         <div
           class="article-card"
-          onclick="location.href='/explain/double-descent/';"
+          onclick="location.href='./double-descent/';"
           style="cursor: pointer"
           id="card1"
         >
@@ -116,7 +116,7 @@
         </div>
         <div
           class="article-card"
-          onclick="location.href='/explain/double-descent-math/';"
+          onclick="location.href='./double-descent-math/';"
           style="cursor: pointer"
         >
           <div class="imgBx"><img src="double-descent2.4bc792e8.png" /></div>
@@ -132,7 +132,7 @@
         </div>
         <div
           class="article-card"
-          onclick="location.href='/explain/train-test-validation/';"
+          onclick="location.href='./train-test-validation/';"
           style="cursor: pointer"
         >
           <div class="imgBx"><img src="train-test.ec816050.png" /></div>
