asset images for og

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MLU-Explain</title>
     <meta name="description" content="MLU-Explain" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./assets/mlu_robot.png" />
     <link rel="stylesheet" href="styles.19717a7e.css" />
   </head>
   <body>
