--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </p>
         </div>
       </section>
-      <div class="articles-container">
+      <!-- <div class="articles-container">
         <div
           class="article-card"
           onclick="location.href='./random-forest/';"
@@ -97,7 +97,7 @@
               related to LASSO and KNN.
             </p>
           </div>
-        </div>
+        </div> -->
         <div
           class="article-card"
           onclick="location.href='./double-descent/';"
@@ -131,7 +131,7 @@
             </p>
           </div>
         </div>
-        <div
+        <!-- <div
           class="article-card"
           onclick="location.href='./train-test-validation/';"
           style="cursor: pointer"
@@ -145,14 +145,10 @@
               utility of each with a live machine learning model.
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
     <script src="js.e9385a84.js"></script>
-    <script>
-      alert(
-        "This is only for demo purposes for vixsai 2021! Please do not share or mention publically! Thanks! :)"
-      );
-    </script>
+
   </body>
 </html>
