--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           </p>
         </div>
       </section>
-      <!-- <div class="articles-container">
-        <div
+      <div class="articles-container">
+        <!-- <div
           class="article-card"
           onclick="location.href='./random-forest/';"
           style="cursor: pointer"
@@ -82,7 +82,7 @@
               decision tree model.
             </p>
           </div>
-        </div>
+        </div> -->
         <div
           class="article-card"
           onclick="location.href='./bias-variance';"
@@ -97,7 +97,7 @@
               related to LASSO and KNN.
             </p>
           </div>
-        </div> -->
+        </div>
         <div
           class="article-card"
           onclick="location.href='./double-descent/';"
@@ -149,6 +149,5 @@
       </div>
     </main>
     <script src="js.e9385a84.js"></script>
-
   </body>
 </html>
