--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </section>
       <div class="articles-container">
-        <!-- <div
+        <div
           class="article-card"
           onclick="location.href='./random-forest/';"
           style="cursor: pointer"
@@ -82,7 +82,7 @@
               decision tree model.
             </p>
           </div>
-        </div> -->
+        </div>
         <div
           class="article-card"
           onclick="location.href='./bias-variance';"
@@ -131,7 +131,7 @@
             </p>
           </div>
         </div>
-        <!-- <div
+        <div
           class="article-card"
           onclick="location.href='./train-test-validation/';"
           style="cursor: pointer"
@@ -145,7 +145,7 @@
               utility of each with a live machine learning model.
             </p>
           </div>
-        </div> -->
+        </div>
       </div>
     </main>
     <script src="js.e9385a84.js"></script>
