shorten open paragraph

--- a/index.html
+++ b/index.html
@@ -57,14 +57,10 @@
               >Machine Learning University (MLU)</a
             >
             is an education initiative designed to teach Amazon's technical
-            community machine learning theory and practical application. We
-            offer a number of courses on different machine learning topics.
-            <br /><br />
-            As supplementary material, MLU-Explain exists to explain core
-            machine learning concepts using visual essays in a fun, informative,
-            and accessible manner. These essays don't yet cover a large number
-            of the concepts covered in our MLU courses, but we are working to
-            add more. Stay tuned!
+            community machine learning theory and practical application. As part
+            of that goal, MLU-Explain exists to explain core machine learning
+            concepts using visual essays in a fun, informative, and accessible
+            manner.
           </p>
         </div>
       </section>
