--- a/index.html
+++ b/index.html
@@ -1,1 +1,245 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>MLU-Explain</title><meta name="description" content="MLU-Explain"><meta name="viewport" content="width=device-width, initial-scale=1"><meta property="og:title" content="MLU-Explain"><meta property="og:image" content="https://mlu-explain.github.io/assets/mluexplain-homepage-ogimage.png"><meta property="og:description" content="Visual explanations of core machine learning concepts."><meta property="og:image:width" content="1200"><meta property="og:image:height" content="600"><link rel="icon" href="mlu_robot.5a492771.png"><link rel="stylesheet" href="styles.e8fec381.css"><script async src="https://www.googletagmanager.com/gtag/js?id=G-1FYW57GW3G"></script><script>function a(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],a("js",new Date),a("config","G-1FYW57GW3G");</script></head><body> <main> <section id="intro"> <div class="wrapper"> <div id="intro-container"> <div id="intro-text"> <span class="intro-icon-container"> <span class="icon"> <svg width="60" height="100" viewBox="0 0 300 180" fill="none" xmlns="https://www.w3.org/2000/svg"><g clip-path="url(#clip0)"><g fill="#232F3E"><path d="M90.664 83.184c6.219 0 11.277-5.055 11.277-11.293v-.067c0-6.234-5.047-11.293-11.277-11.293-6.219 0-11.281 5.059-11.281 11.293v.067c0 6.238 5.05 11.293 11.281 11.293zM143.305 83.184c6.218 0 11.281-5.055 11.281-11.293v-.067c0-6.234-5.051-11.293-11.281-11.293-6.215 0-11.278 5.059-11.278 11.293v.067c0 6.238 5.051 11.293 11.278 11.293z"/></g><path d="M163.586 159.402h10.023v-36.761h-10.023v36.761zM60.36 159.402h10.027v-36.761H60.359v36.761z" fill="#232F3E"/><path d="M182.16 30.078H51.805V10.023H182.16v20.055zm0 73.531H51.805V40.106H182.16v63.503zm-37.601 65.18H89.406v-55.148h55.153v55.148zM0 0v10.023h15.879V46.79h10.023V10.023h15.88v103.618h37.605v65.175H96.93v36.762h10.027v-36.762h20.059v36.762h10.023v-36.762h17.547v-65.175h37.602V10.023h41.781V0" fill="#232F3E"/></g><defs><clipPath id="clip0"><path fill="#fff" d="M0 0h233.97v215.58H0z"/></clipPath></defs></svg> </span> <span class="text"><h1>MLU-EXPL<span id="ai">AI</span>N</h1></span> </span> <h3 class="subtitle"> Visual explanations of core machine learning concepts </h3> <br> <p> <a href="https://aws.amazon.com/machine-learning/mlu/" id="mlu-link">Machine Learning University (<span id="mlu-acronym">MLU</span>)</a> is an education initiative from Amazon designed to teach machine learning theory and practical application.   <br><br> As part of that goal, <span class="havy">MLU-Explain</span> exists to teach important machine learning concepts through visual essays in a fun, informative, and accessible manner. <br> </p> </div> <div id="image-container"> <img id="intro-image" src="mlu-drawing-transparent.2aebba38.png"> </div> </div> </div> </section> <section id="articles-section"> <p class="section-segue">Explore Published Articles...</p> <br> <br> <div class="articles-container">     <div class="article-card"> <div class="imgBx" onclick="location.href='./bias-variance/';" style="cursor:pointer"> <img src="bias-variance.8475ab7f.png"> </div> <div class="content"> <h2 class="article-title">The Bias Variance Tradeoff</h2> <p class="article-description"> Understand the tradeoff between under- and over-fitting models, how it relates to bias and variance, and explore interactive examples related to LASSO and KNN. </p> <button class="content-button"> <a href="./bias-variance/">Dive In.</a> </button> </div> </div>           </div> </section> </main> <br><br> <br><br> <script src="js.eb4a7bc5.js"></script> </body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>MLU-Explain</title>
+    <meta name="description" content="MLU-Explain" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="MLU-Explain" />
+    <meta
+      property="og:image"
+      content="https://mlu-explain.github.io/assets/mluexplain-homepage-ogimage.png"
+    />
+    <meta
+      property="og:description"
+      content="Visual explanations of core machine learning concepts."
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+    <link rel="icon" href="./assets/mlu_robot.png" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1FYW57GW3G"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-1FYW57GW3G");
+    </script>
+  </head>
+
+  <body>
+    <main>
+      <section id="intro">
+        <div class="wrapper">
+          <div id="intro-container">
+            <div id="intro-text">
+              <span class="intro-icon-container">
+                <span class="icon">
+                  <svg
+                    width="60"
+                    height="100"
+                    viewBox="0 0 300 180"
+                    fill="none"
+                    xmlns="https://www.w3.org/2000/svg"
+                    id="mlu-icon"
+                  >
+                    <g id="mlu_robot 1" clip-path="url(#clip0)">
+                      <g>
+                        <g id="eyes">
+                          <path
+                            id="Vector"
+                            d="M90.6641 83.1836C96.8828 83.1836 101.941 78.1289 101.941 71.8906V71.8242C101.941 65.5898 96.8945 60.5312 90.6641 60.5312C84.4453 60.5312 79.3828 65.5898 79.3828 71.8242V71.8906C79.3828 78.1289 84.4336 83.1836 90.6641 83.1836Z"
+                            fill="#232F3E"
+                          ></path>
+                          <path
+                            id="Vector_2"
+                            d="M143.305 83.1836C149.523 83.1836 154.586 78.1289 154.586 71.8906V71.8242C154.586 65.5898 149.535 60.5312 143.305 60.5312C137.09 60.5312 132.027 65.5898 132.027 71.8242V71.8906C132.027 78.1289 137.078 83.1836 143.305 83.1836Z"
+                            fill="#232F3E"
+                          ></path>
+                        </g>
+                        <path
+                          id="Vector_3"
+                          d="M163.586
+                    159.402H173.609V122.641H163.586V159.402Z"
+                          fill="#232F3E"
+                        ></path>
+                        <path
+                          id="Vector_4"
+                          d="M60.3594 159.402H70.3867V122.641H60.3594V159.402Z"
+                          fill="#232F3E"
+                        ></path>
+                        <g id="Group">
+                          <path
+                            id="Vector_5"
+                            d="M182.16 30.0781H51.8047V10.0234H182.16V30.0781ZM182.16 103.609H51.8047V40.1055H182.16V103.609ZM144.559 168.789H89.4062V113.641H144.559V168.789ZM0 0V10.0234H15.8789V46.7891H25.9023V10.0234H41.7812V113.641H79.3867V178.816H96.9297V215.578H106.957V178.816H127.016V215.578H137.039V178.816H154.586V113.641H192.188V10.0234H233.969V0"
+                            fill="#232F3E"
+                          ></path>
+                        </g>
+                      </g>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0">
+                        <rect
+                          width="233.97"
+                          height="215.58"
+                          fill="white"
+                        ></rect>
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </span>
+                <span class="text"
+                  ><h1>MLU-EXPL<span id="ai">AI</span>N</h1></span
+                >
+              </span>
+              <h3 class="subtitle">
+                Visual explanations of core machine learning concepts
+              </h3>
+              <br />
+              <p>
+                <a
+                  href="https://aws.amazon.com/machine-learning/mlu/"
+                  id="mlu-link"
+                  >Machine Learning University (<span id="mlu-acronym">MLU</span
+                  >)</a
+                >
+                is an education initiative from Amazon designed to teach machine
+                learning theory and practical application.
+                <!-- Our goal is to -->
+                <!-- democratize machine learning education. -->
+                <br /><br />
+                As part of that goal,
+                <span class="havy">MLU-Explain</span> exists to teach important
+                machine learning concepts through visual essays in a fun,
+                informative, and accessible manner.
+                <br />
+              </p>
+            </div>
+            <div id="image-container">
+              <img
+                id="intro-image"
+                src="./assets/mlu-drawing-transparent.png"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="articles-section">
+        <p class="section-segue">Explore Published Articles...</p>
+        <br />
+        <br />
+        <div class="articles-container">
+          <!-- card -->
+          <!-- <div class="article-card">
+            <div class="imgBx">
+              <img src="./images/train-test.png" />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Train, Test, and Validation Splits</h2>
+              <p class="article-description">
+                Learn why it is best practice to split your data into training,
+                testing, and validation sets, and explore the utility of each
+                with a live machine learning model.
+              </p>
+              <button class="content-button">
+                <a href="/curriculum">Dive In.</a>
+              </button>
+            </div>
+          </div> -->
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./bias-variance/';"
+              style="cursor: pointer"
+            >
+              <img src="./images/bias-variance.png" />
+            </div>
+            <div class="content">
+              <h2 class="article-title">The Bias Variance Tradeoff</h2>
+              <p class="article-description">
+                Understand the tradeoff between under- and over-fitting models,
+                how it relates to bias and variance, and explore interactive
+                examples related to LASSO and KNN.
+              </p>
+              <button class="content-button">
+                <a href="./bias-variance/">Dive In.</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <!-- <div class="article-card" id="card1">
+            <div class="imgBx">
+              <img src="./images/double-descent1.png" />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Double Descent 1</h2>
+              <p class="article-description">
+                Meet the double descent phenomenon in modern machine learning:
+                what it is, how it relates to the bias-variance tradeoff, the
+                importance of the interpolation regime, and a theory of what
+                lies behind.
+              </p>
+              <button class="content-button">
+                <a href="/curriculum">Dive In.</a>
+              </button>
+            </div>
+          </div> -->
+          <!-- card end -->
+          <!-- card -->
+          <!-- <div
+          class="article-card"
+          onclick="location.href='/explain/double-descent-math/';"
+          style="cursor: pointer"
+        >
+          <div class="imgBx">
+            <img src="./images/double-descent2.png" />
+          </div>
+          <div class="content">
+            <h2 class="article-title">Double Descent 2</h2>
+            <p class="article-description">
+              Deepen your understanding of the double descent phenomenon. The
+              article builds on the cubic spline example introduced in
+              <span class="bold">Double Descent 1</span>, describing in
+              mathematical detail what is happening.
+            </p>
+          </div>
+        </div> -->
+          <!-- card end -->
+          <!-- card -->
+          <!-- <div
+          class="article-card"
+          onclick="location.href='/explain/random-forest';"
+          style="cursor: pointer"
+        >
+          <div class="imgBx">
+            <img src="./images/rf_article_thumbnail.png" />
+          </div>
+          <div class="content">
+            <h2 class="article-title">Random Forest</h2>
+            <p class="article-description">
+              How the majority vote and well-placed randomness can enhance the
+              decision tree model.
+            </p>
+          </div>
+        </div> -->
+          <!-- card end -->
+        </div>
+      </section>
+    </main>
+    <br /><br />
+    <br /><br />
+
+    <script src="js/index.js"></script>
+  </body>
+</html>
