move away from bundle set up

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
     <br /><br />
     <br /><br />
 
+    <script src="js/rough-notation.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
