--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <p class="article-description">
                 Understand the tradeoff between under- and over-fitting models,
                 how it relates to bias and variance, and explore interactive
-                examples related to LASSO and KNN.
+                examples related to LOESS and KNN.
               </p>
               <button class="content-button">
                 <a href="./bias-variance/">Dive In.</a>
