update error chart

--- a/index.html
+++ b/index.html
@@ -155,6 +155,53 @@
             </div>
           </div> -->
           <!-- card end -->
+
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./double-descent/';"
+              style="cursor: pointer"
+            >
+              <img src="./images/double-descent.png" />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Double Descent</h2>
+              <p class="article-description">
+                Meet the double descent phenomenon in modern machine learning:
+                what it is, how it relates to the bias-variance tradeoff, the
+                importance of the interpolation regime, and a theory of what
+                lies behind.
+              </p>
+              <button class="content-button">
+                <a href="./double-descent/">Dive In.</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./double-descent2/';"
+              style="cursor: pointer"
+            >
+              <img src="./images/double-descent11.png" />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Double Descent, Part 2</h2>
+              <p class="article-description">
+                Deepen your understanding of the double descent phenomenon. The
+                article builds on the cubic spline example introduced in
+                <span class="bold">Double Descent 1</span>, describing in
+                mathematical detail what is happening.
+              </p>
+              <button class="content-button">
+                <a href="./double-descent2/">Dive In.</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
           <!-- card -->
           <div class="article-card">
             <div
