change card titles for dd article

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
               <img src="./images/double-descent.png" />
             </div>
             <div class="content">
-              <h2 class="article-title">Double Descent</h2>
+              <h2 class="article-title">
+                Double Descent: A Visual Introduction
+              </h2>
               <p class="article-description">
                 Meet the double descent phenomenon in modern machine learning:
                 what it is, how it relates to the bias-variance tradeoff, the
@@ -189,7 +191,9 @@
               <img src="./images/double-descent11.png" />
             </div>
             <div class="content">
-              <h2 class="article-title">Double Descent, Part 2</h2>
+              <h2 class="article-title">
+                Double Descent 2: A Mathematical Explanation
+              </h2>
               <p class="article-description">
                 Deepen your understanding of the double descent phenomenon. The
                 article builds on the cubic spline example introduced in
