update dd image

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               onclick="location.href='./double-descent/';"
               style="cursor: pointer"
             >
-              <img src="./images/double-descent.png" />
+              <img src="./images/ddimage.png" />
             </div>
             <div class="content">
               <h2 class="article-title">
