--- a/index.html
+++ b/index.html
@@ -113,8 +113,6 @@
                 >
                 is an education initiative from Amazon designed to teach machine
                 learning theory and practical application.
-                <!-- Our goal is to -->
-                <!-- democratize machine learning education. -->
                 <br /><br />
                 As part of that goal,
                 <span class="havy">MLU-Explain</span> exists to teach important
@@ -127,6 +125,7 @@
               <img
                 id="intro-image"
                 src="./assets/mlu-drawing-transparent.png"
+                alt="MLU Robot Deriving Beta Coefficient For Least Squares on Whiteboard"
               />
             </div>
           </div>
@@ -138,24 +137,31 @@
         <br />
         <div class="articles-container">
           <!-- card -->
-          <!-- <div class="article-card">
-            <div class="imgBx">
-              <img src="./images/train-test.png" />
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./decision-tree/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnail-decision-tree.jpg"
+                alt="Decision Tree Title Image"
+              />
             </div>
             <div class="content">
-              <h2 class="article-title">Train, Test, and Validation Splits</h2>
+              <br />
               <p class="article-description">
-                Learn why it is best practice to split your data into training,
-                testing, and validation sets, and explore the utility of each
-                with a live machine learning model.
+                Explore one of machine learning's most popular supervised
+                algorithms: the Decision Tree. Learn how the tree makes its
+                splits, the concepts of Entropy and Information Gain, and why
+                going too deep is problematic.
               </p>
               <button class="content-button">
-                <a href="/curriculum">Dive In.</a>
+                <a href="./decision-tree/">Dive In.</a>
               </button>
             </div>
-          </div> -->
+          </div>
           <!-- card end -->
-
           <!-- card -->
           <div class="article-card">
             <div
@@ -163,12 +169,13 @@
               onclick="location.href='./double-descent/';"
               style="cursor: pointer"
             >
-              <img src="./images/ddimage.png" />
+              <img
+                src="./assets/thumbnail-double-descent1.jpg"
+                alt="Double Descent Title Image"
+              />
             </div>
             <div class="content">
-              <h2 class="article-title">
-                Double Descent: A Visual Introduction
-              </h2>
+              <br />
               <p class="article-description">
                 Meet the double descent phenomenon in modern machine learning:
                 what it is, how it relates to the bias-variance tradeoff, the
@@ -188,12 +195,13 @@
               onclick="location.href='./double-descent2/';"
               style="cursor: pointer"
             >
-              <img src="./images/double-descent11.png" />
+              <img
+                src="./assets/thumbnail-double-descent2.jpg"
+                alt="Double Descent 2 Title Image"
+              />
             </div>
             <div class="content">
-              <h2 class="article-title">
-                Double Descent 2: A Mathematical Explanation
-              </h2>
+              <br />
               <p class="article-description">
                 Deepen your understanding of the double descent phenomenon. The
                 article builds on the cubic spline example introduced in
@@ -213,10 +221,13 @@
               onclick="location.href='./bias-variance/';"
               style="cursor: pointer"
             >
-              <img src="./images/bias-variance.png" />
+              <img
+                src="./assets/thumbnail-bias-variance.jpg"
+                alt="Bias Variance Title Image"
+              />
             </div>
             <div class="content">
-              <h2 class="article-title">The Bias Variance Tradeoff</h2>
+              <br />
               <p class="article-description">
                 Understand the tradeoff between under- and over-fitting models,
                 how it relates to bias and variance, and explore interactive
@@ -227,63 +238,6 @@
               </button>
             </div>
           </div>
-          <!-- card end -->
-          <!-- card -->
-          <!-- <div class="article-card" id="card1">
-            <div class="imgBx">
-              <img src="./images/double-descent1.png" />
-            </div>
-            <div class="content">
-              <h2 class="article-title">Double Descent 1</h2>
-              <p class="article-description">
-                Meet the double descent phenomenon in modern machine learning:
-                what it is, how it relates to the bias-variance tradeoff, the
-                importance of the interpolation regime, and a theory of what
-                lies behind.
-              </p>
-              <button class="content-button">
-                <a href="/curriculum">Dive In.</a>
-              </button>
-            </div>
-          </div> -->
-          <!-- card end -->
-          <!-- card -->
-          <!-- <div
-          class="article-card"
-          onclick="location.href='/explain/double-descent-math/';"
-          style="cursor: pointer"
-        >
-          <div class="imgBx">
-            <img src="./images/double-descent2.png" />
-          </div>
-          <div class="content">
-            <h2 class="article-title">Double Descent 2</h2>
-            <p class="article-description">
-              Deepen your understanding of the double descent phenomenon. The
-              article builds on the cubic spline example introduced in
-              <span class="bold">Double Descent 1</span>, describing in
-              mathematical detail what is happening.
-            </p>
-          </div>
-        </div> -->
-          <!-- card end -->
-          <!-- card -->
-          <!-- <div
-          class="article-card"
-          onclick="location.href='/explain/random-forest';"
-          style="cursor: pointer"
-        >
-          <div class="imgBx">
-            <img src="./images/rf_article_thumbnail.png" />
-          </div>
-          <div class="content">
-            <h2 class="article-title">Random Forest</h2>
-            <p class="article-description">
-              How the majority vote and well-placed randomness can enhance the
-              decision tree model.
-            </p>
-          </div>
-        </div> -->
           <!-- card end -->
         </div>
       </section>
