--- a/index.html
+++ b/index.html
@@ -140,6 +140,31 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./random-forest/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-random-forest.jpg"
+                alt="Decision Tree Title Image"
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Random Forest</h2>
+              <p class="article-description">
+                Learn about one of machine learning's most popular, widely-used
+                algorithms, the Random Forest, and see how some well-placed
+                randomness.
+              </p>
+              <button class="content-button">
+                <a href="./random-forest/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./decision-tree/';"
               style="cursor: pointer"
             >
@@ -149,7 +174,7 @@
               />
             </div>
             <div class="content">
-              <br />
+              <h2 class="article-title">Decision Trees</h2>
               <p class="article-description">
                 Explore one of machine learning's most popular supervised
                 algorithms: the Decision Tree. Learn how the tree makes its
@@ -157,59 +182,7 @@
                 going too deep is problematic.
               </p>
               <button class="content-button">
-                <a href="./decision-tree/">Dive In.</a>
-              </button>
-            </div>
-          </div>
-          <!-- card end -->
-          <!-- card -->
-          <div class="article-card">
-            <div
-              class="imgBx"
-              onclick="location.href='./double-descent/';"
-              style="cursor: pointer"
-            >
-              <img
-                src="./assets/thumbnails/thumbnail-double-descent.jpg"
-                alt="Double Descent Title Image"
-              />
-            </div>
-            <div class="content">
-              <br />
-              <p class="article-description">
-                Meet the double descent phenomenon in modern machine learning:
-                what it is, how it relates to the bias-variance tradeoff, the
-                importance of the interpolation regime, and a theory of what
-                lies behind.
-              </p>
-              <button class="content-button">
-                <a href="./double-descent/">Dive In.</a>
-              </button>
-            </div>
-          </div>
-          <!-- card end -->
-          <!-- card -->
-          <div class="article-card">
-            <div
-              class="imgBx"
-              onclick="location.href='./double-descent2/';"
-              style="cursor: pointer"
-            >
-              <img
-                src="./assets/thumbnails/thumbnail-double-descent2.jpg"
-                alt="Double Descent 2 Title Image"
-              />
-            </div>
-            <div class="content">
-              <br />
-              <p class="article-description">
-                Deepen your understanding of the double descent phenomenon. The
-                article builds on the cubic spline example introduced in
-                <span class="bold">Double Descent 1</span>, describing in
-                mathematical detail what is happening.
-              </p>
-              <button class="content-button">
-                <a href="./double-descent2/">Dive In.</a>
+                <a href="./decision-tree/">Dive In</a>
               </button>
             </div>
           </div>
@@ -227,14 +200,70 @@
               />
             </div>
             <div class="content">
-              <br />
+              <h2 class="article-title">The Bias Variance Tradeoff</h2>
               <p class="article-description">
                 Understand the tradeoff between under- and over-fitting models,
                 how it relates to bias and variance, and explore interactive
                 examples related to LOESS and KNN.
               </p>
               <button class="content-button">
-                <a href="./bias-variance/">Dive In.</a>
+                <a href="./bias-variance/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./double-descent/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-double-descent.jpg"
+                alt="Double Descent Title Image"
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">
+                Double Descent: A Visual Introduction
+              </h2>
+              <p class="article-description">
+                Meet the double descent phenomenon in modern machine learning:
+                what it is, how it relates to the bias-variance tradeoff, the
+                importance of the interpolation regime, and a theory of what
+                lies behind.
+              </p>
+              <button class="content-button">
+                <a href="./double-descent/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./double-descent2/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-double-descent2.jpg"
+                alt="Double Descent 2 Title Image"
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">
+                Double Descent: A Mathematical Explanation
+              </h2>
+              <p class="article-description">
+                Deepen your understanding of the double descent phenomenon. The
+                article builds on the cubic spline example introduced in
+                <span class="bold">Double Descent 1</span>, describing in
+                mathematical detail what is happening.
+              </p>
+              <button class="content-button">
+                <a href="./double-descent2/">Dive In</a>
               </button>
             </div>
           </div>
