update rf card text

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
             <div class="content">
               <h2 class="article-title">Random Forest</h2>
               <p class="article-description">
-                Learn about one of machine learning's most popular, widely-used
-                algorithms, the Random Forest, and see how some well-placed
-                randomness.
+                Learn how the majority vote and well-placed randomness can
+                extend the decision tree model to one of machine learning's most
+                widely-used algorithms, the Random Forest.
               </p>
               <button class="content-button">
                 <a href="./random-forest/">Dive In</a>
