adding precision-recall article

--- a/index.html
+++ b/index.html
@@ -140,6 +140,32 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./precision-recall/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-precision-recall.jpg"
+                alt="Precision Recall Article Image (Beeswarm Plot)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Precision & Recall</h2>
+              <p class="article-description">
+                When it comes to evaluating classification models, accuracy is
+                often a poor metric. This article covers two common
+                alternatives, Precision and Recall, as well as the F1-score and
+                Confusion Matrices.
+              </p>
+              <button class="content-button">
+                <a href="./precisin-recall/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./random-forest/';"
               style="cursor: pointer"
             >
