add traintest article card

--- a/index.html
+++ b/index.html
@@ -140,6 +140,31 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./train-test-validation/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-train-test-validation.jpg"
+                alt="Train, Test, Validation Article Image (Groups of cats/dogs in circles)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Train, Test, And Validation Sets</h2>
+              <p class="article-description">
+                Learn why it is best practice to split your data into training,
+                testing, and validation sets, and explore the utility of each
+                with a live machine learning model.
+              </p>
+              <button class="content-button">
+                <a href="./train-test-validation/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./precision-recall/';"
               style="cursor: pointer"
             >
