Add: card for ROC & AUC article

--- a/index.html
+++ b/index.html
@@ -140,6 +140,31 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./roc-auc/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-roc-auc.jpg"
+                alt="ROC & AUC Article Image (A Scatterplot showing three ROC curves: one labeled Perfect Classifier (line hugging left and top of plot), one labeled Our Classifier (bumpy line), and one labeled Random Classifier (diagonal line))."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">ROC & AUC</h2>
+              <p class="article-description">
+                A visual explanation of the Receiver Operating Characteristic
+                Curve (ROC) curve, how it works with a live interactive example,
+                and how it relates to Area Under The Curve (AUC).
+              </p>
+              <button class="content-button">
+                <a href="./roc-auc/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./train-test-validation/';"
               style="cursor: pointer"
             >
