--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 Confusion Matrices.
               </p>
               <button class="content-button">
-                <a href="./precisin-recall/">Dive In</a>
+                <a href="./precision-recall/">Dive In</a>
               </button>
             </div>
           </div>
