--- a/linear-regression/index.html
+++ b/linear-regression/index.html
@@ -10,6 +10,39 @@
 
     <script defer src="build/bundle.js"></script>
 
+    <!-- meta tags -->
+    <title>Linear Regression</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="A visual, interactive explanation of linear regression for machine learning. Topics include model evaluation with mean-squared error and r-squared, ptimization with closed-form least squares or gradient descent, model interpretability, and more!"
+    />
+    <meta name="author" content="Jared Wilber" />
+    <meta
+      name="news_keywords"
+      content="linear regression classification threshold binary visual machine learning mean squared error r-squared gradient descent closed form least squares interpretability multivariate"
+    />
+    <meta property="og:title" content="Logistic Regression" />
+    <meta property="og:site_name" content="MLU-Explain" />
+    <meta
+      property="og:url"
+      content="https://mlu-explain.github.io/linear-regression/"
+    />
+    <meta
+      property="og:description"
+      content="A visual, interactive explanation of linear regression for machine learning. Topics include model evaluation with mean-squared error and r-squared, ptimization with closed-form least squares or gradient descent, model interpretability, and more!"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:image"
+      content="https://mlu-explain.github.io/assets/ogimages/ogimage-linear-regression.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
