--- a/linear-regression/index.html
+++ b/linear-regression/index.html
@@ -38,9 +38,9 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:image"
-      content="https://mlu-explain.github.io/assets/ogimages/ogimage-linear-regression.png"
+      content="https://mlu-explain.github.io/assets/ogimages/ogimage-linear-regression.jpg"
     />
-    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
