--- a/linear-regression/index.html
+++ b/linear-regression/index.html
@@ -24,7 +24,7 @@
       name="news_keywords"
       content="linear regression classification threshold binary visual machine learning mean squared error r-squared gradient descent closed form least squares interpretability multivariate"
     />
-    <meta property="og:title" content="Logistic Regression" />
+    <meta property="og:title" content="Linear Regression" />
     <meta property="og:site_name" content="MLU-Explain" />
     <meta
       property="og:url"
