--- a/linear-regression/index.html
+++ b/linear-regression/index.html
@@ -17,7 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="A visual, interactive explanation of linear regression for machine learning. Topics include model evaluation with mean-squared error and r-squared, ptimization with closed-form least squares or gradient descent, model interpretability, and more!"
+      content="A visual, interactive explanation of linear regression for machine learning."
     />
     <meta name="author" content="Jared Wilber" />
     <meta
@@ -32,7 +32,7 @@
     />
     <meta
       property="og:description"
-      content="A visual, interactive explanation of linear regression for machine learning. Topics include model evaluation with mean-squared error and r-squared, ptimization with closed-form least squares or gradient descent, model interpretability, and more!"
+      content="A visual, interactive explanation of linear regression for machine learning."
     />
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="en_US" />
