Add card for linear regression article

--- a/index.html
+++ b/index.html
@@ -140,6 +140,30 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./linear-regression/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-linear-regression.jpg"
+                alt="Linear Regression Article Image (A Scatterplot showing orange points and a black line on the right. On the left math equations for The Normal Equation)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Linear Regression</h2>
+              <p class="article-description">
+                Interactively learn about linear regression models as they're
+                commonly used in the context of machine learning.
+              </p>
+              <button class="content-button">
+                <a href="./linear-regression/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./logistic-regression/';"
               style="cursor: pointer"
             >
@@ -151,7 +175,9 @@
             <div class="content">
               <h2 class="article-title">Logistic Regression</h2>
               <p class="article-description">
-                Learn how logistic regression can be used for binary classification in machine learning through an interactive example.
+                Learn how logistic regression can be used for binary
+                classification in machine learning through an interactive
+                example.
               </p>
               <button class="content-button">
                 <a href="./logistic-regression/">Dive In</a>
