Add cross-validation thumbnail

--- a/index.html
+++ b/index.html
@@ -140,22 +140,23 @@
           <div class="article-card">
             <div
               class="imgBx"
-              onclick="location.href='./linear-regression/';"
+              onclick="location.href='./cross-validation/';"
               style="cursor: pointer"
             >
               <img
-                src="./assets/thumbnails/thumbnail-linear-regression.jpg"
-                alt="Linear Regression Article Image (A Scatterplot showing orange points and a black line on the right. On the left math equations for The Normal Equation)."
+                src="./assets/thumbnails/thumbnail-cross-validation.jpg"
+                alt="Cross-Validation Article Image."
               />
             </div>
             <div class="content">
-              <h2 class="article-title">Linear Regression</h2>
+              <h2 class="article-title">Cross-Validation</h2>
               <p class="article-description">
-                Interactively learn about linear regression models as they're
-                commonly used in the context of machine learning.
+                K-Fold Cross-Validation: a resampling technique to help improve
+                estimates of test error rates compared to a simple validation
+                set.
               </p>
               <button class="content-button">
-                <a href="./linear-regression/">Dive In</a>
+                <a href="./cross-validation/">Dive In</a>
               </button>
             </div>
           </div>
@@ -181,6 +182,30 @@
               </p>
               <button class="content-button">
                 <a href="./logistic-regression/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./linear-regression/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-linear-regression.jpg"
+                alt="Linear Regression Article Image (A Scatterplot showing orange points and a black line on the right. On the left math equations for The Normal Equation)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Linear Regression</h2>
+              <p class="article-description">
+                Interactively learn about linear regression models as they're
+                commonly used in the context of machine learning.
+              </p>
+              <button class="content-button">
+                <a href="./linear-regression/">Dive In</a>
               </button>
             </div>
           </div>
