--- a/reinforcement-learning/index.html
+++ b/reinforcement-learning/index.html
@@ -10,6 +10,38 @@
 
     <script defer src="build/bundle.js"></script>
 
+    <!-- meta tags -->
+    <title>Reinforcement Learning</title>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="A visual, interactive explanation of Reinforcement Learning."
+    />
+    <meta name="author" content="Jared Wilber" />
+    <meta
+      name="news_keywords"
+      content="Reinforcement Learning classification exploit explore threshold binary visual machine learning mean squared error r-squared gradient descent closed form least squares interpretability multivariate"
+    />
+    <meta property="og:title" content="Reinforcement Learning" />
+    <meta property="og:site_name" content="MLU-Explain" />
+    <meta
+      property="og:url"
+      content="https://mlu-explain.github.io/reinforcement-learning/"
+    />
+    <meta
+      property="og:description"
+      content="A visual, interactive explanation of Reinforcement Learning."
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      property="og:image"
+      content="https://mlu-explain.github.io/assets/ogimages/ogimage-reinforcement-learning.jpg"
+    />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
