--- a/index.html
+++ b/index.html
@@ -164,6 +164,30 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./reinforcement-learning/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-reinforcement-learning.jpg"
+                alt="Reinforcement Learning Article Image (Grid with arrows, bananas, a robot, and a cactus)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Reinforcement Learning</h2>
+              <p class="article-description">
+                Learn about Reinforcement Learning (RL) and the
+                exploration-exploitation dilemma with this interactive article.
+              </p>
+              <button class="content-button">
+                <a href="./reinforcement-learning/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./logistic-regression/';"
               style="cursor: pointer"
             >
