--- a/index.html
+++ b/index.html
@@ -140,6 +140,55 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./equality-of-odds/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-equality-of-odds.jpg"
+                alt="Equality of Odds Article Image (A Scatterplot on the left with a decision boundary corresponding to a stacked column chart on the right)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Equality of Odds</h2>
+              <p class="article-description">
+                Explore equality of odds, a metric used to quantify unfairness
+                and remove bias from machine learning models.
+              </p>
+              <button class="content-button">
+                <a href="./equality-of-odds/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
+              onclick="location.href='./logistic-regression/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-logistic-regression.jpg"
+                alt="Logistic Regression Article Image (A Scatterplot showing points for Sunny and Rainy days plotted by Temperature in degrees Fahrenheit and the predicted probability as a sigmoid curve)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Logistic Regression</h2>
+              <p class="article-description">
+                Learn how logistic regression can be used for binary
+                classification in machine learning through an interactive
+                example.
+              </p>
+              <button class="content-button">
+                <a href="./logistic-regression/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./linear-regression/';"
               style="cursor: pointer"
             >
@@ -180,31 +229,6 @@
               </p>
               <button class="content-button">
                 <a href="./reinforcement-learning/">Dive In</a>
-              </button>
-            </div>
-          </div>
-          <!-- card end -->
-          <!-- card -->
-          <div class="article-card">
-            <div
-              class="imgBx"
-              onclick="location.href='./logistic-regression/';"
-              style="cursor: pointer"
-            >
-              <img
-                src="./assets/thumbnails/thumbnail-logistic-regression.jpg"
-                alt="Logistic Regression Article Image (A Scatterplot showing points for Sunny and Rainy days plotted by Temperature in degrees Fahrenheit and the predicted probability as a sigmoid curve)."
-              />
-            </div>
-            <div class="content">
-              <h2 class="article-title">Logistic Regression</h2>
-              <p class="article-description">
-                Learn how logistic regression can be used for binary
-                classification in machine learning through an interactive
-                example.
-              </p>
-              <button class="content-button">
-                <a href="./logistic-regression/">Dive In</a>
               </button>
             </div>
           </div>
