--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <br />
         <div class="articles-container">
           <!-- card -->
-          <div class="article-card">
+          <!-- <div class="article-card">
             <div
               class="imgBx"
               onclick="location.href='./equality-of-odds/';"
@@ -158,7 +158,7 @@
                 <a href="./equality-of-odds/">Dive In</a>
               </button>
             </div>
-          </div>
+          </div> -->
           <!-- card end -->
           <!-- card -->
           <div class="article-card">
