add neural networks article card

--- a/index.html
+++ b/index.html
@@ -140,6 +140,31 @@
           <div class="article-card">
             <div
               class="imgBx"
+              onclick="location.href='./neural-networks/';"
+              style="cursor: pointer"
+            >
+              <img
+                src="./assets/thumbnails/thumbnail-neural-networks.jpg"
+                alt="Neural Networks Article Image (A computational graph, with two input nodes, multiple nodes in some hidden layers, and two output nodes)."
+              />
+            </div>
+            <div class="content">
+              <h2 class="article-title">Neural Networks</h2>
+              <p class="article-description">
+                Learn about neural networks, the backbone of many popular
+                algorithms today, such as ChatGPT, Stable-Diffusion, and many
+                others
+              </p>
+              <button class="content-button">
+                <a href="./neural-networks/">Dive In</a>
+              </button>
+            </div>
+          </div>
+          <!-- card end -->
+          <!-- card -->
+          <div class="article-card">
+            <div
+              class="imgBx"
               onclick="location.href='./equality-of-odds/';"
               style="cursor: pointer"
             >
